# bazel_rules_godot

./: .gitignore  MODULE.bazel
character_common/: BUILD  icon.svg.import  project.godot  test_character_common.tscn
character_cpp_gdext/: BUILD
character_cpp_gdext/src/: gdexample.cpp  register_gdext.cpp  register_gdext.h
character_gdscript/: BUILD  project.godot
character_rust_gdext/: BUILD
character_rust_gdext/src/: lib.rs  rust_example_node2d.rs
godot_rules/: BUILD  MODULE.bazel  extensions.bzl  godot_core_rules.bzl  godot_cpp_BUILD.bzl  godot_cpp_rules.bzl  godot_rules.bzl  scons_rules.bzl
rules_godot/: BUILD  MODULE.bazel  extensions.bzl  rules.bzl
rules_godot/private/core/: core_rules.bzl  core_rules_impl.bzl
rules_godot/private/cpp/: gdextension_cpp_rule.bzl  godot_cpp_build.bzl  godot_cpp_extension.bzl
rules_godot/private/gdextension/: gdextension_rule.bzl
rules_godot/private/rust/: gdextension_rust_rule.bzl
sample_game/: BUILD  GodotBazelExampleGame.sln  export_presets.cfg  icon.svg.import  node_3d.tscn  project.godot
sample_game/_addon/: godot_bazel_plugin
sample_game/_addon/godot_bazel_gdscript_plugin/: BazelBuildButton.tscn  BazelDependenciesDock.tscn  GodotBazelEditorPluginLoader.gd  GodotBazelEditorPluginLoader.gd.uid
